# Multidocument-AI-Chatbot

./: .env.example  README.md  main.py  pyproject.toml
agentservices/: agentservices.py
controllers/: botcontrollers.py
models/: pdf-request-models.py
services/: chatbotservices.py
