[project]
name = "multidocument-ai-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.138.0",
    "google-genai>=2.9.0",
    "langchain>=1.3.10",
    "langchain-community>=0.4.2",
    "langchain-google-genai>=4.2.5",
    "langchain-pinecone>=0.2.13",
    "langchain-text-splitters>=1.1.2",
    "numpy>=2.4.6",
    "pinecone>=7.3.0",
    "pypdf>=6.13.3",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "uvicorn>=0.49.0",
]
